After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739899 - Crashes in hack_filter_model_data_func (location-entry.c)
Crashes in hack_filter_model_data_func (location-entry.c)
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2014-11-10 16:03 UTC by Yanko Kaneti
Modified: 2014-12-21 18:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the filter model hack (1.82 KB, patch)
2014-12-11 22:14 UTC, Matthias Clasen
committed Details | Review

Description Yanko Kaneti 2014-11-10 16:03:08 UTC
Please take a look at https://retrace.fedoraproject.org/faf2/problems/169742
We have a number of these in gnome-clocks in Fedora going back to F19
Comment 1 Matthias Clasen 2014-12-11 22:14:04 UTC
Created attachment 292575 [details] [review]
Fix the filter model hack

The current code leads to crashes when there are no matches.
Using weak references to update the filter_model pointer when
that model goes away avoids theses.
Comment 2 Giovanni Campagna 2014-12-21 17:36:37 UTC
Review of attachment 292575 [details] [review]:

Looks good.
Comment 3 Giovanni Campagna 2014-12-21 18:13:59 UTC
Pushed as part of the new stable release.