Fix the filter model hack

The current code leads to crashes when there are no matches.
Using weak references to update the filter_model pointer when
that model goes away avoids theses.

https://bugzilla.gnome.org/show_bug.cgi?id=739899